# rust-api-signed-upload

./: .env.example  Cargo.toml  Makefile  README.md  docker-compose.yml
migrations/: 20230111024010_create_users_table.sql  20230118040324_create_timeline_table.sql  20230121205650_create_posts_table.sql
src/: main.rs
src/config/: mod.rs
src/domain/: constants.rs  errors.rs  mod.rs
src/domain/commands/: mod.rs
src/domain/commands/pix_payment/: start.rs
src/domain/commands/user/: create.rs
src/domain/commands/video/: upload.rs
src/domain/contracts/: context.rs  deps.rs  http.rs  mod.rs  object_storage.rs  repository.rs
src/domain/entities/: mod.rs  user.rs
src/domain/queries/: mod.rs
src/domain/queries/timeline/: get_timeline.rs  mod.rs
src/domain/value_objects/: cursor.rs  email.rs  mod.rs  password.rs  secret.rs
src/infra/: mod.rs
src/infra/factory/: post.rs  timeline.rs  user.rs
src/infra/http/: mod.rs
src/infra/object_storage/: s3.rs
src/infra/repository/: mod.rs  timeline.rs  users.rs
src/presentation/rest/: errors.rs  mod.rs  traits.rs
src/presentation/rest/controllers/: health_check.rs  mod.rs  pix_payment.rs  timeline.rs  user.rs  video.rs
src/presentation/rest/extensions/: context.rs  user.rs
src/presentation/rest/view_models/: mod.rs  pix_payment.rs  register.rs  timeline.rs  video.rs
