[package]
name = "betar_me"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.91"
error-stack = "0.1.1"
mockall = "0.11.2"
async-trait = "0.1.57"
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-core = "0.1.29"
tracing-subscriber = "0.3.15"
tracing-futures = "0.2.5"
tracing-bunyan-formatter = "0.3.3"
tower = "0.4.13"
thiserror = "1.0.35"
validator = "0.16.0"
anyhow = "1.0.65"
reqwest = "0.11.12"
chrono = { version = "0.4.23", features = ["serde"] }
bcrypt = "0.13.0"
dotenv = "0.15.0"
hyper = "0.14.23"
fake = "2.5"
rand = "0.8"
serde = { version = "1.0.152", features = ["derive"] }
axum-macros = "0.3.1"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
qrcode = "0.12.0"

[dependencies.tower-http]
version = "0.3.0"
features = ["trace", "request-id"]

[dependencies.axum]
version = "0.5.16"

[dependencies.tokio]
version = "1.21.1"
features = ["rt-multi-thread", "macros"]
